BROKEN (https://github.com/openrewrite/rewrite/issues/4852), fixing (#350)